# tilsotua

./: .gitignore  .readthedocs.yaml  LRIS_Mask_Coords_to_WCS.py  README.md  callcode.py  create_err_plot.py  createds9regions.py  find_shifts.py  pyproject.toml  refractioncorrection.py  setup.py  write_ds9_file.py
Examples/: test_mask.file3  tilsotua_example_mask.csv  tilsotua_example_mask.fits
docs/: conf.py  index.rst  installation.rst  output.rst  requirements.txt  steps.rst  tutorial.rst  usage.rst  using_tilsotua.ipynb  xytowcs.rst
testreverseautoslitcode/: LRIS_Mask_Coords_to_WCS.py  __init__.py  create_err_plot.py  write_ds9_file.py
tilsotua/: LRIS_Mask_Coords_to_WCS.py  __init__.py  astrometrycorrection.py  blank_template.fits  callcode.py  create_err_plot.py  create_quicklookplot.py  find_shifts.py  precessionroutine.py  refractioncorrection.py  use_autoslit_input.py  write_ds9_file.py
tilsotua.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tilsotua/example/: test.py  test_mask.fits  tilsotua_example_mask.reg
