[tool.poetry]
name = "testreverseautoslitcode"
version = "0.1.23"
description = "Test Compiling of Code"
authors = ["Jessica Sullivan <jsulli27@nd.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
astropy = "^4.3.post1"
matplotlib = "^3.4.2"
panstamps = "^0.6.1"
pytest-shutil = "^1.7.0"
numpy = "^1.21.1"
astroquery = "^0.4.3"
regions = "^0.5"
PyQt5 = ""
shapely = ""

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
