[tool.poetry]
name = "tilsotua"
version = "0.1.36"
description = "tilsotua: reverse autoslit calculations of LRIS slitmasks"
authors = ["Jessica Sullivan <jsulli27@nd.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
astropy = "4.3.post1"
matplotlib = "3.4.2"
panstamps = "0.6.1"
pytest-shutil = "1.7.0"
numpy = "1.21.1"
astroquery = "0.4.3"
regions = "0.5"
pyyaml = "5.3.1"
shapely = ""
scipy = "1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools<50"]
build-backend = "poetry.core.masonry.api"
