[tool.poetry]
name = "tilsotua"
version = "0.1.36"
description = "tilsotua: reverse autoslit calculations of LRIS slitmasks"
authors = ["Jessica Sullivan <jsulli27@nd.edu>"]

[tool.poetry.dependencies]
python = "*"
astropy = "*"
matplotlib = "*"
panstamps = "*"
pytest-shutil = "*"
numpy = "*"
astroquery = "*"
pyyaml = "*"
shapely = "*"
scipy = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools<50"]
build-backend = "poetry.core.masonry.api"
